--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^8.8.1",
     "next": "12.0.7",
     "next-auth": "^3.29.0",
     "react": "17.0.2",
